JWT || ajustes regras de negocio || ajustes gerais
